Updated tolist()